--- a/notebooks/05.ipynb
+++ b/notebooks/05.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Control Flow Statements"
+    "# 控制流程"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##If"
+    "## If"
    ]
   },
   {
@@ -33,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -48,14 +46,14 @@
    "source": [
     "x = 12\n",
     "if x >10:\n",
-    "    print \"Hello\""
+    "    print(\"Hello\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##If-else"
+    "## If-else"
    ]
   },
   {
@@ -74,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -89,23 +85,21 @@
    "source": [
     "x = 12\n",
     "if x > 10:\n",
-    "    print \"hello\"\n",
+    "    print(\"hello\")\n",
     "else:\n",
-    "    print \"world\""
+    "    print(\"world\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##if-elif"
+    "## if-elif"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "if some_condition:\n",
     "    \n",
@@ -123,9 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -139,26 +131,24 @@
     "x = 10\n",
     "y = 12\n",
     "if x > y:\n",
-    "    print \"x>y\"\n",
+    "    print(\"x>y\")\n",
     "elif x < y:\n",
-    "    print \"x<y\"\n",
+    "    print(\"x<y\")\n",
     "else:\n",
-    "    print \"x=y\""
+    "    print(\"x=y\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "if statement inside a if statement or if-elif or if-else are called as nested if statements."
+    "if 流程可以嵌套其他 if 流程"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -173,36 +163,34 @@
     "x = 10\n",
     "y = 12\n",
     "if x > y:\n",
-    "    print \"x>y\"\n",
+    "    print(\"x>y\")\n",
     "elif x < y:\n",
-    "    print \"x<y\"\n",
+    "    print(\"x<y\")\n",
     "    if x==10:\n",
-    "        print \"x=10\"\n",
+    "        print(\"x=10\")\n",
     "    else:\n",
-    "        print \"invalid\"\n",
+    "        print(\"invalid\")\n",
     "else:\n",
-    "    print \"x=y\""
+    "    print(\"x=y\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Loops"
+    "## 循环"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###For"
+    "### For"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "for variable in something:\n",
     "    \n",
@@ -212,9 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -230,22 +216,20 @@
    ],
    "source": [
     "for i in range(5):\n",
-    "    print i"
+    "    print(i)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the above example, i iterates over the 0,1,2,3,4. Every time it takes each value and executes the algorithm inside the loop. It is also possible to iterate over a nested list illustrated below."
+    "也可以在一个多维的列表上循环："
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -260,22 +244,20 @@
    "source": [
     "list_of_lists = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
     "for list1 in list_of_lists:\n",
-    "        print list1"
+    "        print(list1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A use case of a nested for loop in this case would be,"
+    "循环也可以嵌套："
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -297,21 +279,19 @@
     "list_of_lists = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
     "for list1 in list_of_lists:\n",
     "    for x in list1:\n",
-    "        print x"
+    "        print(x)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###While"
+    "### While"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "while some_condition:\n",
     "    \n",
@@ -321,9 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -347,22 +325,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Break"
+    "## Break"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the name says. It is used to break out of a loop when a condition becomes true when executing the loop."
+    "break可以用来打破循环："
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -381,31 +357,29 @@
    ],
    "source": [
     "for i in range(100):\n",
-    "    print i\n",
+    "    print(i)\n",
     "    if i>=7:\n",
-    "        break"
+    "        break    ### 满足条件时终止这个for循环"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Continue"
+    "## Continue"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This continues the rest of the loop. Sometimes when a condition is satisfied there are chances of the loop getting terminated. This can be avoided using continue statement. "
+    "continue用来在条件达成后继续此循环："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -427,32 +401,30 @@
    "source": [
     "for i in range(10):\n",
     "    if i>4:\n",
-    "        print \"The end.\"\n",
+    "        print(\"The end.\")\n",
     "        continue\n",
     "    elif i<7:\n",
-    "        print i"
+    "        print(i)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##List Comprehensions"
+    "## 列表解析"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python makes it simple to generate a required list with a single line of code using list comprehensions. For example If i need to generate multiples of say 27 I write the code using for loop as,"
+    "列表解析说的是借助循环，Python可以用一行代码生成指定规则的列表。比如如果想要生成以27的倍数组成的列表："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -467,58 +439,20 @@
     "for i in range(1,11):\n",
     "    x = 27*i\n",
     "    res.append(x)\n",
-    "print res"
+    "print(res)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since you are generating another list altogether and that is what is required, List comprehensions is a more efficient way to solve this problem."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[27, 54, 81, 108, 135, 162, 189, 216, 243, 270]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[27*x for x in range(1,11)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That's it!. Only remember to enclose it in square brackets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Understanding the code, The first bit of the code is always the algorithm and then leave a space and then write the necessary loop. But you might be wondering can nested loops be extended to list comprehensions? Yes you can."
+    "列表解析的方法也可以达成这个目的："
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -532,22 +466,20 @@
     }
    ],
    "source": [
-    "[27*x for x in range(1,20) if x<=10]"
+    "[27*x for x in range(1,11)]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let me add one more loop to make you understand better, "
+    "判断条件也可以嵌套："
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -561,29 +493,63 @@
     }
    ],
    "source": [
+    "[27*x for x in range(1,20) if x<=10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "更多条件： "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[27, 54, 81, 108, 135, 162, 189, 216, 243, 270]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "[27*z for i in range(50) if i==27 for z in range(1,11)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3.5.2 64-bit",
    "language": "python",
-   "name": "python2"
+   "name": "python35264bitfe95a84a9df4473795e4501ce456065d"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
