python_tutorials_** finished.

--- a/notebooks/python_tutorials_06.ipynb
+++ b/notebooks/python_tutorials_06.ipynb
@@ -722,15 +722,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are small functions which are not defined with any name and carry a single expression whose result is returned. Lambda functions comes very handy when operating with lists. These function are defined by the keyword **lambda** followed by the variables, a colon and the respective expression."
+    "Lambda函数是一类表达式，执行类似函数的功能，但并不需要声明一个函数名称. 对列表List进行操作时，Lambda函数比较方便. Lambda函数用 **lambda** 加变量名，再加冒号的方式使用"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "z = lambda x: x * x"
@@ -738,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +745,7 @@
        "64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,22 +758,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###map"
+    "### map"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**map( )** function basically executes the function that is defined to each of the list's element separately."
+    "**map( )** 依次执行对一个列表中各个元素的操作."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "list1 = [1,2,3,4,5,6,7,8,9]"
@@ -783,32 +779,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 4, 5, 6, 7, 8, 9, 10, 11]\n"
+      "<map object at 0x7fee53f7e6d8>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5, 6, 7, 8, 9, 10, 11]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "eg = map(lambda x:x+2, list1)\n",
-    "print eg"
+    "print(eg)\n",
+    "### 注：eg是一个map对象，本质是一个迭代器，所以可以通过for循环或者构造list来使用这个迭代器：\n",
+    "list(eg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also add two lists."
+    "也可对两个列表进行操作："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,67 +825,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10, 10, 10, 10, 10, 10, 10, 10, 10]\n"
+      "<map object at 0x7fee53f7eb00>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[10, 10, 10, 10, 10, 10, 10, 10, 10]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "eg2 = map(lambda x,y:x+y, list1,list2)\n",
-    "print eg2"
+    "print(eg2)\n",
+    "list(eg2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not only lambda function but also other built in functions can also be used."
+    "map函数中，不仅可以用lambda函数做操作，也可以用其他python内置函数："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['10', '10', '10', '10', '10', '10', '10', '10', '10']\n"
+      "<map object at 0x7fee53f7ecc0>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['9', '8', '7', '6', '5', '4', '3', '2', '1']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "eg3 = map(str,eg2)\n",
-    "print eg3"
+    "eg3 = map(str,list2)  ### 把list2中的每个元素转化为字符串\n",
+    "print(eg3)\n",
+    "list(eg3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###filter"
+    "### filter"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**filter( )** function is used to filter out the values in a list. Note that **filter()** function returns the result in a new list."
+    "**filter( )** 函数用来过滤列表中的元素。 **filter()** 返回的也是一个迭代器。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "list1 = [1,2,3,4,5,6,7,8,9]"
@@ -887,12 +915,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get the elements which are less than 5,"
+    "挑出所有小于5的元素："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -901,25 +929,25 @@
        "[1, 2, 3, 4]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filter(lambda x:x<5,list1)"
+    "list(filter(lambda x:x<5,list1))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice what happens when **map()** is used."
+    "对比一下 **map()** 函数，同样的内容，map返回一个判断值."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -928,40 +956,13 @@
        "[True, True, True, True, False, False, False, False, False]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "map(lambda x:x<5, list1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can conclude that, whatever is returned true in **map( )** function that particular element is returned when **filter( )** function is used."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[4, 8]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filter(lambda x:x%4==0,list1)"
+    "list(map(lambda x:x<5, list1))"
    ]
   }
  ],
