Add some python examples

--- a/notebooks/Python_Examples/Simple_Python_Examples.ipynb
+++ b/notebooks/Python_Examples/Simple_Python_Examples.ipynb
@@ -299,6 +299,191 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def twoSum(self, nums, target):\n",
+    "        \"\"\"\n",
+    "        找到nums中两个相加等于target的数，返回两个数的序号\n",
+    "        :type nums: List[int]\n",
+    "        :type target: int\n",
+    "        :rtype: List[int]\n",
+    "        \"\"\"\n",
+    "        ### 声明一个空字典：\n",
+    "        d = {}\n",
+    "        ### 枚举函数enumerate返回nums列表的每个元素的序号和值：\n",
+    "        for index, value in enumerate(nums):\n",
+    "            ### 用target减去nums中的每一个数，差再和后一个数比较，\n",
+    "            ### 如果和后一个数相等，返回结果，如果不相等，把这个数连同序号存入字典d\n",
+    "            if value in d:\n",
+    "                return [d[value], index]\n",
+    "            else:\n",
+    "                d[target - value] = index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [5, 66, 2, 7, 11, 15]\n",
+    "target = 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.twoSum(nums,target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def reverse(self, x):\n",
+    "        \"\"\"\n",
+    "        将一个数字反向。数字范围限制在32位的int以内，即超过2的31次方返回0即可。\n",
+    "        :type x: int\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        ### 将输入的整数转化为字符串，方便按位置进行操作\n",
+    "        arr_input = str(x)\n",
+    "\n",
+    "        ### 如果是负数：\n",
+    "        if arr_input[0] == \"-\":\n",
+    "            result = (int(\"-\" + arr_input[:0:-1]))\n",
+    "\n",
+    "        ### 如果是正数：\n",
+    "        else:\n",
+    "            result = (int(arr_input[::-1]))\n",
+    "\n",
+    "        ### 如果反转的结果超过了2的31次方：\n",
+    "        if abs(result) > 2 ** 31:\n",
+    "            return (0)\n",
+    "        else:\n",
+    "            return (result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54321"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.reverse(12345)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-98765"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.reverse(-56789)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "543"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.reverse(3450)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.reverse(2147483645)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
