Add some python examples conti.

--- a/notebooks/Python_Examples/Simple_Python_Examples.ipynb
+++ b/notebooks/Python_Examples/Simple_Python_Examples.ipynb
@@ -484,6 +484,180 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    \"\"\"\n",
+    "    判断一个整数是否为回文数\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    def reverseInteger(self, num):\n",
+    "        \"\"\"\n",
+    "        把一个整数反向，但不使用上面的先把整数转化为字符串的方法\n",
+    "        \"\"\"\n",
+    "        res = 0\n",
+    "        ### while循环继续的条件是num不为0\n",
+    "        while num:\n",
+    "            ### 让carry等于num的最后一位数字：\n",
+    "            carry = num % 10\n",
+    "            res = res * 10 + carry\n",
+    "            num = num // 10\n",
+    "\n",
+    "        return res\n",
+    "\n",
+    "    def isPalindrome(self, x):\n",
+    "        \"\"\"\n",
+    "        输入为x\n",
+    "        :type x: int\n",
+    "        :rtype: bool\n",
+    "        \"\"\"\n",
+    "        ### 首先判断输入的是否为负数，如果是负数，肯定不是回文数：\n",
+    "        if str(x)[0] == \"-\":\n",
+    "            return False\n",
+    "\n",
+    "        ### 此处用self.的方式使用了自身类中定义的方法：\n",
+    "        if x == self.reverseInteger(x):\n",
+    "            return True\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = Solution()\n",
+    "s.isPalindrome(-141)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.isPalindrome(12345)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.isPalindrome(1234321)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def longestCommonPrefix(self, strs):\n",
+    "        \"\"\"\n",
+    "        返回几个字符串间最长的公共前缀，例如：\n",
+    "        输入: [\"flower\",\"flow\",\"flight\"]\n",
+    "　　　　　输出: \"fl\"\n",
+    "        :type strs: List[str]\n",
+    "        :rtype: str\n",
+    "        \"\"\"\n",
+    "        ### 如果输入的是空字符串，结束进程\n",
+    "        if not strs:\n",
+    "            return \"\"\n",
+    "\n",
+    "        index = 1\n",
+    "        ### 在这里，输入的strs中的每个字符串的长度len()组成了一个列表，这个列表的最小值赋给了min_len\n",
+    "        min_len = min([len(ele) for ele in strs])  \n",
+    "\n",
+    "        while index <= min_len:  ###公共前缀的长度一定小于最小的那个字符串的长度\n",
+    "            ### 这里使用了基本的python方法set，即集合；\n",
+    "            ### 如果以下这个集合的长度为1，则说明strs中的字符串都有一样的公共元素ele[:index]\n",
+    "            if len(set([ele[:index] for ele in strs])) == 1:\n",
+    "                index += 1\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "        return strs[0][:index - 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strs_input = [\"flow\",\"fly\",\"fly me to the moon\",\"flag\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fl'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.longestCommonPrefix(strs_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
