ROS Tutorials cont.

--- a/notebooks/ROS_Tutorials/ROS_Nodes.ipynb
+++ b/notebooks/ROS_Tutorials/ROS_Nodes.ipynb
@@ -4,24 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Understanding ROS Nodes\n",
+    "## Understanding ROS Nodes 理解ROS节点\n",
     "\n",
-    "This tutorial introduces ROS graph concepts and discusses the use of `roscore`, `rosnode`, and `rosrun` commandline tools.\n",
+    "本节介绍了ROS的总体概念和一些命令行工具的用法： `roscore`, `rosnode`, `rosrun` \n",
     "\n",
-    "Source: [ROS Wiki](http://wiki.ros.org/ROS/Tutorials/UnderstandingNodes)"
+    "来源: [ROS Wiki](http://wiki.ros.org/ROS/Tutorials/UnderstandingNodes)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quick Overview of Graph Concepts\n",
-    "* Nodes: A node is an executable that uses ROS to communicate with other nodes.\n",
-    "* Messages: ROS data type used when subscribing or publishing to a topic.\n",
-    "* Topics: Nodes can publish messages to a topic as well as subscribe to a topic to receive messages.\n",
-    "* Master: Name service for ROS (i.e. helps nodes find each other)\n",
-    "* rosout: ROS equivalent of stdout/stderr\n",
-    "* roscore: Master + rosout + parameter server (parameter server will be introduced later)"
+    "### ROS核心概念：\n",
+    "* Nodes: ROS节点，一系列应用了ROS API的应用程序.\n",
+    "* Messages: ROS框架下传递的信息.\n",
+    "* Topics: ROS框架下传递信息的通道."
    ]
   },
   {
@@ -30,19 +27,19 @@
    "source": [
     "### roscore\n",
     "\n",
-    "`roscore` is the first thing you should run when using ROS."
+    "`roscore` 使用ROS应该首先运行roscore\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting job # 0 in a separate thread.\n"
+      "Starting job # 2 in a separate thread.\n"
      ]
     }
    ],
@@ -55,14 +52,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using `rosnode`\n",
+    "以上命令将会在本地计算机后台启动一个rosmaster程序，可以通过单独打开一个terminal输入\n",
     "\n",
-    "`rosnode` displays information about the ROS nodes that are currently running. The `rosnode list` command lists these active nodes:"
+    "```bash\n",
+    "top | grep rosmaster\n",
+    "\n",
+    "```\n",
+    "\n",
+    "并回车查看rosmaster的进程pid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  rosnode\n",
+    "\n",
+    "`rosnode` 可用于查看此时运行的ROS节点的信息. 比如 `rosnode list` 可以返回所有运行中的节点的名称:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,8 +111,8 @@
       " * /rosout/set_logger_level\n",
       "\n",
       "\n",
-      "contacting node http://localhost:43395/ ...\n",
-      "Pid: 18703\n",
+      "contacting node http://localhost:34625/ ...\n",
+      "Pid: 8142\n",
       "\n"
      ]
     }
@@ -115,67 +126,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using `rosrun`\n",
+    "### rosrun\n",
     "\n",
-    "`rosrun` allows you to use the package name to directly run a node within a package (without having to know the package path)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting job # 2 in a separate thread.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash --bg\n",
-    "rosrun turtlesim turtlesim_node"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "NOTE: The turtle may look different in your turtlesim window. Don't worry about it - there are [many types of turtle](http://wiki.ros.org/Distributions#Current_Distribution_Releases) and yours is a surprise!"
+    "`rosrun` rosrun可以用来启动一个ROS节点，通过指定要启动的节点的ROS文件夹和ROS节点的名称来执行。(在本地计算机安装配置好ROS环境的情况下，可以不指定ROS文件夹的路径)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/rosout\n",
-      "/turtlesim\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "rosnode list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "One powerful feature of ROS is that you can reassign Names from the command-line.\n",
-    "\n",
-    "Close the turtlesim window to stop the node. Now let's re-run it, but this time use a [Remapping Argument](http://wiki.ros.org/Remapping%20Arguments) to change the node's name:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,26 +146,27 @@
    ],
    "source": [
     "%%bash --bg\n",
-    "rosrun turtlesim turtlesim_node __name:=my_turtle"
+    "rosrun turtlesim turtlesim_node"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, if we go back and use `rosnode list`:"
+    "以上命令会启动一个名为TurleSim的ROS程序窗口。\n",
+    "\n",
+    "NOTE: 窗口中间位置出现的小乌龟样子是随机的，每次可能都不一样，所有的乌龟样式参见： [many types of turtle](http://wiki.ros.org/Distributions#Current_Distribution_Releases) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/my_turtle\n",
       "/rosout\n",
       "/turtlesim\n"
      ]
@@ -222,14 +181,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Review\n",
-    "What was covered:\n",
+    "再用rosnode list就会看到多了一个叫turtlesim的节点。\n",
     "\n",
-    "* roscore = ros+core : master (provides name service for ROS) + rosout (stdout/stderr) + parameter server (parameter server will be introduced later)\n",
-    "* rosnode = ros+node : ROS tool to get information about a node.\n",
-    "* rosrun = ros+run : runs a node from a given package.\n",
+    "ROS还能在启动节点的时候改变节点的名字，即在rosrun命令中对节点进行重命名。\n",
     "\n",
-    "Now that you understand how ROS nodes work, let's look at how [ROS topics](ROS%20Topics.ipynb) work."
+    "首先关闭刚才的TurtleSim窗口，现在加上重命名参数 [Remapping Argument](http://wiki.ros.org/Remapping%20Arguments) 来重新启动此节点:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting job # 4 in a separate thread.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash --bg\n",
+    "rosrun turtlesim turtlesim_node __name:=my_turtle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "再次运行 `rosnode list`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/my_turtle\n",
+      "/rosout\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "rosnode list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下一节将详细介绍ROS话题： [ROS topics](ROS_Topics.ipynb) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "此时如果不再需要，可以关闭turtlesim窗口，并Run以下指令关闭现有的roscore："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "killall -9 rosmaster"
    ]
   },
   {
