--- a/notebooks/ROS_Tutorials/Writing_the_Client_Node_in_Python.ipynb
+++ b/notebooks/ROS_Tutorials/Writing_the_Client_Node_in_Python.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Writing the Client Node"
+    "## 编写一个 Client 节点\n",
+    "\n",
+    "保持上一节中的程序一直运行。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +23,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The client code for calling services is also simple. For clients you don't have to call `init_node()`. We first call: "
+    "client节点更简单，无需调用 `init_node()`. 直接使用: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +39,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a convenience method that blocks until the service named `add_two_ints` is available. Next we create a handle for calling the service: "
+    "这句代码会让此节点等待 `add_two_ints` 服务准备好。下面使用ServiceProxy去请求service: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +55,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use this handle just like a normal function and call it: "
+    "输出结果: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum: 8\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    print( add_two_ints(5, 3) )\n",
@@ -72,8 +82,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because we've declared the type of the service to be `AddTwoInts`, it does the work of generating the `AddTwoIntsRequest` object for you (you're free to pass in your own instead). The return value is an `AddTwoIntsResponse` object. If the call fails, a `rospy.ServiceException` may be thrown, so you should setup the appropriate `try/except` block. "
+    "因为我们已经声明服务的类型为`AddTwoInts`，所以请求服务的时候可以生成`AddTwoIntsRequest`对象. 返回值是一个 `AddTwoIntsResponse` 对象. 如果服务获取失败了， `rospy.ServiceException` 异常会被抛出. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
