--- a/notebooks/ROS_Tutorials/Writing_the_Subscriber_Node_in_Python.ipynb
+++ b/notebooks/ROS_Tutorials/Writing_the_Subscriber_Node_in_Python.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Code Explained"
+    "## 代码详解\n",
+    "\n",
+    "首先确保上一节Writing the Publisher Node in Python中的程序保持运行"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code for the listener is similar to the talker, except we've introduced a new callback-based mechanism for subscribing to messages. "
+    "我们引入了一种新的基于回调的消息订阅机制："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +53,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This declares that your node subscribes to the `chatter` topic which is of type `std_msgs.msgs.String`. When new messages are received, `callback` is invoked with the message as the first argument.\n",
+    "以上代码首先声明此节点订阅了名称为 `chatter` 的ROS话题，数据格式为 `std_msgs.msgs.String`. 当新的消息进来时, `callback` 方程就被调用了.\n",
     "\n",
-    "We also changed up the call to `rospy.init_node()` somewhat. We've added the `anonymous=True` keyword argument. ROS requires that each node have a unique name. If a node with the same name comes up, it bumps the previous one. This is so that malfunctioning nodes can easily be kicked off the network. The `anonymous=True` flag tells `rospy` to generate a unique name for the node so that you can have multiple listener nodes run easily.\n",
+    "ROS框架规定每个节点都应该有一个独有的名称。如果出现重名，后启动的节点就会顶替掉之前的节点。这样一来，故障节点就可以轻松地被踢出去。\n",
+    "anonymous=True标志告诉rospy为该节点生成一个唯一的名称，这样同样的代码可以启动许多个执行相同功能的listener节点。\n",
     "\n",
-    "The final addition, `rospy.spin()` simply keeps your node from exiting until the node has been shutdown. Unlike `roscpp`, `rospy.spin()` does not affect the subscriber callback functions, as those have their own threads. "
+    "下一节将介绍编写提供服务的节点：\n",
+    "\n",
+    "[Wrting a Service Node in Python](Wrting_a_Service_Node_in_Python.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
