--- a/notebooks/ROS_Tutorials/Wrting_a_Service_Node_in_Python.ipynb
+++ b/notebooks/ROS_Tutorials/Wrting_a_Service_Node_in_Python.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Writing a Service Node\n",
-    "Here we'll create the service (\"add_two_ints_server\") node which will receive two ints and return the sum. "
+    "## 编写一个Service节点\n",
+    "\n",
+    "这里我们将编写一个提供(\"add_two_ints_server\")服务的节点，接受两个整数，返回和。\n",
+    "\n",
+    "保持roscore运行。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +36,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's very little to writing a service using [rospy](http://wiki.ros.org/rospy). We declare our node using `init_node()` and then declare our service: "
+    "使用 [rospy](http://wiki.ros.org/rospy) 来写一个服务节点并不复杂，只需要初始化节点 `init_node()` 并声明服务即可: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +53,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This declares a new service named `add_two_ints` with the `AddTwoInts` service type. All requests are passed to `handle_add_two_ints` function. `handle_add_two_ints` is called with instances of `AddTwoIntsRequest` and returns instances of `AddTwoIntsResponse`. \n",
+    "在这里，我们声明了一个新的服务叫做 `add_two_ints` ，服务类型是 `AddTwoInts`. 所有的服务请求都将交给上面编写的 `handle_add_two_ints` 方程. `handle_add_two_ints` 方程被一个 `AddTwoIntsRequest` 的实例调用，返回一个 `AddTwoIntsResponse` 的实例. \n",
     "\n",
-    "Just like with the subscriber example, `rospy.spin()` keeps your code from exiting until the service is shutdown. "
+    "和订阅节点一样， `rospy.spin()` 维持代码持续运行直到服务关闭。 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ready to add two ints.\n",
+      "Returning [5 + 3 = 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"Ready to add two ints.\"\n",
+    "rospy.spin()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下一节编写请求服务的节点：\n",
+    "\n",
+    "[Writing the Client Node in Python](Writing_the_Client_Node_in_Python.ipynb)"
    ]
   },
   {
@@ -60,10 +91,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print \"Ready to add two ints.\"\n",
-    "rospy.spin()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
