Modified the python tutorials

--- a/notebooks/python_tutorials_04.ipynb
+++ b/notebooks/python_tutorials_04.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "'*a_a-'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -840,12 +840,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "但首先要注意的是：\n",
+    "\n",
+    "* 1. 字典的索引，也就是键不能有重复值；\n",
+    "* 2. 字典内的元素没有顺序；"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Two': 2, 'One': 11, 'Three': 3, 'Four': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1={'One':1,'Two':2,'Three':3,'Four':4,'One':11}\n",
+    "print(d1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "字典的键可以是任意的“hashable”的类型（简单来说，就是需要具有__hash__()方法）："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-ae815677b76c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ml1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ml2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0md1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0ml1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'length 2'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'length 3'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [0,1]\n",
+    "l2 = [2,3,4]\n",
+    "d1 = {l1:'length 2',l2:'length 3'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以看出，list列表不是一个hashable的类型。相对应地，tuple元组就是一个hashable的类型："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(0, 1): 'length 2', (2, 3, 4): 'length 3'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = (0,1)\n",
+    "l2 = (2,3,4)\n",
+    "d1 = {l1:'length 2',l2:'length 3'}\n",
+    "print(d1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "自定义的任何一个类的不同实例，默认都是hashable的："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{<__main__.UserDefined object at 0x7fe5680da588>: 'length 2', <__main__.UserDefined object at 0x7fe5680da5c0>: 'length 3'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class UserDefined():\n",
+    "    pass\n",
+    "\n",
+    "ud1 = UserDefined()\n",
+    "ud2 = UserDefined()\n",
+    "\n",
+    "d1 = {ud1:'length 2',ud2:'length 3'}\n",
+    "print(d1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "现在就可以用指定的索引“one”这个字符串来访问指定的值："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,14 +1002,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<zip object at 0x7ff7c441ae88>\n"
+      "<zip object at 0x7fe5689ba988>\n"
      ]
     }
    ],
@@ -913,14 +1029,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Four': 4, 'Five': 5, 'One': 1, 'Two': 2, 'Three': 3}\n"
+      "{'Two': 2, 'One': 1, 'Three': 3, 'Five': 5, 'Four': 4}\n"
      ]
     }
    ],
@@ -945,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -970,14 +1086,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Four': 4, 'Five': 5, 'One': 1, 'Two': 2, 'Three': 3}\n"
+      "{'Two': 2, 'One': 1, 'Three': 3, 'Five': 5, 'Four': 4}\n"
      ]
     }
    ],
@@ -997,16 +1113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_values([4, 5, 1, 2, 3])"
+       "dict_values([2, 1, 3, 5, 4])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,16 +1140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['Four', 'Five', 'One', 'Two', 'Three'])"
+       "dict_keys(['Two', 'One', 'Three', 'Five', 'Four'])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,16 +1167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_items([('Four', 4), ('Five', 5), ('One', 1), ('Two', 2), ('Three', 3)])"
+       "dict_items([('Two', 2), ('One', 1), ('Three', 3), ('Five', 5), ('Four', 4)])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,14 +1194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Five': 5, 'One': 1, 'Two': 2, 'Three': 3}\n",
+      "{'Two': 2, 'One': 1, 'Three': 3, 'Five': 5}\n",
       "4\n"
      ]
     }
