--- a/notebooks/python_tutorials_05.ipynb
+++ b/notebooks/python_tutorials_05.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -451,6 +451,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[27, 54, 81, 108, 135, 162, 189, 216, 243, 270]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[27*x for x in range(1,11)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "判断条件也可以嵌套："
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -466,14 +493,14 @@
     }
    ],
    "source": [
-    "[27*x for x in range(1,11)]"
+    "[27*x for x in range(1,20) if x<=10]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "判断条件也可以嵌套："
+    "更多条件： "
    ]
   },
   {
@@ -493,34 +520,96 @@
     }
    ],
    "source": [
-    "[27*x for x in range(1,20) if x<=10]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "更多条件： "
+    "[27*z for i in range(50) if i==27 for z in range(1,11)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[27, 54, 81, 108, 135, 162, 189, 216, 243, 270]"
+       "[27,\n",
+       " 54,\n",
+       " 81,\n",
+       " 108,\n",
+       " 135,\n",
+       " 162,\n",
+       " 189,\n",
+       " 216,\n",
+       " 243,\n",
+       " 270,\n",
+       " 27,\n",
+       " 54,\n",
+       " 81,\n",
+       " 108,\n",
+       " 135,\n",
+       " 162,\n",
+       " 189,\n",
+       " 216,\n",
+       " 243,\n",
+       " 270,\n",
+       " 27,\n",
+       " 54,\n",
+       " 81,\n",
+       " 108,\n",
+       " 135,\n",
+       " 162,\n",
+       " 189,\n",
+       " 216,\n",
+       " 243,\n",
+       " 270,\n",
+       " 27,\n",
+       " 54,\n",
+       " 81,\n",
+       " 108,\n",
+       " 135,\n",
+       " 162,\n",
+       " 189,\n",
+       " 216,\n",
+       " 243,\n",
+       " 270,\n",
+       " 27,\n",
+       " 54,\n",
+       " 81,\n",
+       " 108,\n",
+       " 135,\n",
+       " 162,\n",
+       " 189,\n",
+       " 216,\n",
+       " 243,\n",
+       " 270,\n",
+       " 27,\n",
+       " 54,\n",
+       " 81,\n",
+       " 108,\n",
+       " 135,\n",
+       " 162,\n",
+       " 189,\n",
+       " 216,\n",
+       " 243,\n",
+       " 270,\n",
+       " 27,\n",
+       " 54,\n",
+       " 81,\n",
+       " 108,\n",
+       " 135,\n",
+       " 162,\n",
+       " 189,\n",
+       " 216,\n",
+       " 243,\n",
+       " 270]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[27*z for i in range(50) if i==27 for z in range(1,11)]"
+    "[27*z for i in range(50) if i<7 for z in range(1,11)]"
    ]
   },
   {
